<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_amount_label">Bill Amount</string>
    <string name="percentage_label">Percentage</string>
    <string name="percentage">15%</string>
    <string name="tip_label">Tip</string>
    <string name="tip">$ 0.00</string>
    <string name="total_label">Total</string>
    <string name="total">$ 0.00</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>