<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/billAmuntLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="5dp"
        android:text="@string/bill_amount_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/billAmounteditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billAmounteditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/billAmuntLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billAmuntLabel" />

    <TextView
        android:id="@+id/percentageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/percentage_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/prcentageTxt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/prcentageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="41dp"
        android:text="@string/percentage"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/percentageLabel"
        app:layout_constraintTop_toBottomOf="@+id/billAmounteditText" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_width="@dimen/button_width_height"
        android:layout_height="@dimen/button_width_height"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="29dp"
        android:text="@string/minus"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/tipTxt"
        app:layout_constraintEnd_toEndOf="@+id/billAmounteditText"
        app:layout_constraintTop_toBottomOf="@+id/billAmounteditText" />

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="@dimen/button_width_height"
        android:layout_height="@dimen/button_width_height"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="31dp"
        android:text="@string/plus"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/minusBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minusBtn" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/tip_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentageLabel" />

    <TextView
        android:id="@+id/tipTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="37dp"
        android:text="@string/tip"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/minusBtn"
        app:layout_constraintTop_toBottomOf="@+id/prcentageTxt" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:text="@string/total_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel" />

    <TextView
        android:id="@+id/totalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="39dp"
        android:text="@string/total"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/tipTxt"
        app:layout_constraintTop_toBottomOf="@+id/tipTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>